feat: problem solve

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -76,8 +76,7 @@
 
   <!-- Chat widget root -->
 <!-- DMS Chat Widget (SSE version) -->
-<div id="dms-chatbot" class="dms-chat" data-sse="true" 
-data-api="https://dms-backend.onrender.com">
+<div id="dms-chatbot" class="dms-chat" data-sse="true" data-api="https://dms-backend.onrender.com">
     
     <!-- Floating action button -->
     <button class="dms-chat__fab" aria-label="Open chat" aria-expanded="false" type="button">
