--- a/src/static/index.html
+++ b/src/static/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="/static/css/dms-chat-widget.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    
+    google-site-verification: googledd7dd7916155c1d4.html
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
     {
