--- a/src/static/index.html
+++ b/src/static/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="DMS MEHEDI - Digital Marketing Expert • Web Developer • Shopify Dropshipping Specialist">
     <meta property="twitter:description" content="Professional digital marketing expert, web developer, and Shopify dropshipping specialist. Get premium services for your business growth.">
     <meta property="twitter:image" content="">
-
+    <meta name="google-site-verification" content="0PTnKrnGTDiV8MRT2s4HqYGdlBhlE9D2bvedPw6K2EQ" />
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="/static/css/dms-chat-widget.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    google-site-verification: googledd7dd7916155c1d4.html
+    
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
     {
