--- a/src/static/index.html
+++ b/src/static/index.html
@@ -256,7 +256,7 @@
                                 <span class="skill-tag">JavaScript</span>
                                 <span class="skill-tag">React</span>
                                 <span class="skill-tag">Node.js</span>
-                                <span class="skill-tag">WordPress</span>
+                                <span class="skill-tag">Python</span>
                             </div>
                         </div>
                         <div class="skill-category">
